# python-api-router

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  test_full.py  test_hello.py  test_tools.py
api_router/: __init__.py  main.py
api_router/composition/: startup.py
api_router/modules/: config.py  proxy.py
docs/dev/: ARCHITECTURE.md
